--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "concurrently \"npm run client\" \"npm run server\"",
     "client": "webpack-dev-server",
-    "server": "nodemon index.js"
+    "server": "NODE_ENV=node nodemon index.js"
   },
   "author": "",
   "license": "ISC",
@@ -16,21 +16,40 @@
     "babel-core": "^6.22.1",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.22.0",
+    "bootstrap-sass": "^3.3.7",
     "koa": "^1.2.4",
     "koa-ejs": "^3.0.0",
     "koa-router": "^7.1.0",
     "koa-static": "^2.0.0",
     "node-jsx": "^0.13.3",
+    "node-sass": "^4.5.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "react-router": "^3.0.2",
-    "webpack": "^2.2.0"
+    "react-router": "^3.0.2"
   },
   "devDependencies": {
+    "babel-cli": "^6.22.2",
+    "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
+    "babel-plugin-transform-assets": "^0.2.0",
+    "babel-plugin-transform-require-ignore": "0.0.2",
+    "babel-plugin-transform-runtime": "^6.22.0",
+    "babel-polyfill": "^6.22.0",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-es2015-node6": "^0.4.0",
+    "babel-preset-react": "^6.22.0",
+    "babel-preset-stage-0": "^6.22.0",
+    "babel-register": "^6.22.0",
     "concurrently": "^3.1.0",
+    "css-loader": "^0.26.1",
+    "extract-text-webpack-plugin": "^2.0.0-rc.3",
+    "isomorphic-style-loader": "^1.1.0",
     "koa-livereload": "^0.2.0",
+    "node-sass": "^4.5.0",
     "nodemon": "^1.11.0",
-    "webpack": "^1.14.0"
+    "sass-loader": "^4.1.1",
+    "style-loader": "^0.13.1",
+    "webpack": "^2.2.1",
+    "webpack-dev-server": "^2.3.0"
   }
 }
