--- a/.babelrc
+++ b/.babelrc
@@ -1,15 +1,3 @@
 {
-    "presets": ["es2015", "react", "stage-0"],
-    "env": {
-        "node": {
-            "plugins": [
-                [
-                    "babel-plugin-transform-require-ignore",
-                    {
-                        "extensions": [".scss", ".css"]
-                    }
-                ]
-            ]
-        }
-    }
+    "presets": ["es2015", "react", "stage-0"]
 }
