--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "koa-ejs": "^3.0.0",
     "koa-router": "^7.1.0",
     "koa-static": "^2.0.0",
-    "node-jsx": "^0.13.3",
     "node-sass": "^4.5.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
@@ -31,9 +30,6 @@
     "babel-cli": "^6.22.2",
     "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
-    "babel-plugin-transform-assets": "^0.2.0",
-    "babel-plugin-transform-require-ignore": "0.0.2",
-    "babel-plugin-transform-runtime": "^6.22.0",
     "babel-polyfill": "^6.22.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-es2015-node6": "^0.4.0",
@@ -43,11 +39,10 @@
     "concurrently": "^3.1.0",
     "css-loader": "^0.26.1",
     "extract-text-webpack-plugin": "^2.0.0-rc.3",
-    "isomorphic-style-loader": "^1.1.0",
-    "koa-livereload": "^0.2.0",
     "node-sass": "^4.5.0",
     "nodemon": "^1.11.0",
     "sass-loader": "^4.1.1",
+    "sass-resources-loader": "^1.2.0",
     "style-loader": "^0.13.1",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.3.0"
