--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.15.3",
     "babel-cli": "^6.22.2",
     "babel-core": "^6.22.1",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.22.0",
     "bootstrap-sass": "^3.3.7",
+    "es6-promise": "^4.0.5",
+    "isomorphic-fetch": "^2.2.1",
     "koa": "^1.2.4",
     "koa-ejs": "^3.0.0",
     "koa-router": "^7.1.0",
@@ -24,7 +27,10 @@
     "node-sass": "^4.5.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "react-router": "^3.0.2"
+    "react-redux": "^5.0.2",
+    "react-router": "^3.0.2",
+    "redux-promise-middleware": "^4.2.0",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "babel-cli": "^6.22.2",
