- added a fetchData HOC to fix data sync issues - added template support for post and pages - added category view - fixed route handling for koa

--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "concurrently \"npm run client\" \"npm run server\"",
     "client": "webpack-dev-server",
-    "server": "NODE_ENV=node nodemon index.js"
+    "build": "webpack",
+    "watch": "webpack -w",
+    "server": "NODE_ENV=node nodemon --config nodemon.json index.js"
   },
   "author": "",
   "license": "ISC",
@@ -22,13 +24,17 @@
     "isomorphic-fetch": "^2.2.1",
     "koa": "^1.2.4",
     "koa-ejs": "^3.0.0",
-    "koa-router": "^7.1.0",
-    "koa-static": "^2.0.0",
+    "koa-router": "^5.0.0",
+    "koa-router-static": "^1.2.0",
+    "koa-static": "^2.1.0",
     "node-sass": "^4.5.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-raw-html": "^0.4.0",
     "react-redux": "^5.0.2",
     "react-router": "^3.0.2",
+    "react-router-redux": "^4.0.8",
+    "redux-devtools-extension": "^2.13.0",
     "redux-promise-middleware": "^4.2.0",
     "redux-thunk": "^2.2.0"
   },
