--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "koa-router-static": "^1.2.0",
     "koa-static": "^2.1.0",
     "node-sass": "^4.5.0",
+    "rc-animate": "^2.3.3",
     "react": "^15.4.2",
     "react-addons-css-transition-group": "^15.4.2",
     "react-dom": "^15.4.2",
