--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "concurrently \"npm run client\" \"npm run server\"",
-    "client": "webpack-dev-server -w --inline",
-    "build": "webpack",
-    "watch": "webpack -w",
-    "server": "NODE_ENV=node nodemon --config nodemon.json index.js"
+    "client": "webpack-dev-server --config webpack.node.config.js -w --inline",
+    "build": "webpack --config webpack.node.config.js",
+    "watch": "webpack --config webpack.node.config.js -w",
+    "server": "NODE_ENV=node nodemon --config nodemon.json index.js",
+    "php": "webpack --config webpack.php.config.js"
   },
   "author": "",
   "license": "ISC",
@@ -39,7 +40,9 @@
     "react-router-redux": "^4.0.8",
     "redux-devtools-extension": "^2.13.0",
     "redux-promise-middleware": "^4.2.0",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "rxjs": "^5.2.0",
+    "three": "^0.84.0"
   },
   "devDependencies": {
     "babel-cli": "^6.22.2",
@@ -61,6 +64,7 @@
     "sass-resources-loader": "^1.2.0",
     "style-loader": "^0.13.1",
     "webpack": "^2.2.1",
+    "webpack-comment-remover-loader": "0.0.3",
     "webpack-dev-server": "^2.3.0"
   }
 }
