--- a/js/package.json
+++ b/js/package.json
@@ -6,11 +6,12 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "concurrently \"npm run client\" \"npm run server\"",
-    "client": "webpack-dev-server --config webpack.node.config.js -w --inline",
-    "build": "webpack --config webpack.node.config.js",
-    "watch": "webpack --config webpack.node.config.js -w",
-    "server": "NODE_ENV=node nodemon --config nodemon.json index.js",
-    "php": "webpack --config webpack.php.config.js"
+    "dev-client": "webpack-dev-server --config webpack.node.config.js -w --inline",
+    "build": "npm run client && npm run php",
+    "watch": "concurrently \"webpack --config webpack.node.config.js -w\" \"webpack --config webpack.php.config.js -w\"",
+    "server": "NODE_ENV=node nodemon --config nodemon.json index.js -w",
+    "php": "webpack --config webpack.php.config.js",
+    "client": "webpack --config webpack.node.config.js"
   },
   "author": "",
   "license": "ISC",
@@ -38,6 +39,7 @@
     "react-redux": "^5.0.2",
     "react-router": "^3.0.2",
     "react-router-redux": "^4.0.8",
+    "redux": "^3.6.0",
     "redux-devtools-extension": "^2.13.0",
     "redux-promise-middleware": "^4.2.0",
     "redux-thunk": "^2.2.0",
@@ -49,12 +51,12 @@
     "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
     "babel-polyfill": "^6.22.0",
-    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-es2015": "^6.24.0",
     "babel-preset-es2015-node6": "^0.4.0",
     "babel-preset-react": "^6.22.0",
     "babel-preset-stage-0": "^6.22.0",
     "babel-register": "^6.22.0",
-    "concurrently": "^3.1.0",
+    "concurrently": "^3.4.0",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.26.1",
     "extract-text-webpack-plugin": "^2.0.0-rc.3",
